--- a/css/main.css
+++ b/css/main.css
@@ -95,3 +95,16 @@ h3{
     transform: scale(1.055); 
 opacity: 0.8;
 }
+.button {
+  background-color:  #008CBA; /* blue*/
+  border: none;
+  color: white;
+  padding: 9px 17px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+border-radius: 8px;
+}
